--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-modern-drawer": "^1.2.2"
   },
   "devDependencies": {
