--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@solana/web3.js": "^1.91.1",
     "next": "14.1.0",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
